# standalone-pocketfft

./: CMakeLists.txt  pocketfft.c  pocketfft.h
